[package]
name = "status-page"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }  # Enable JSON feature for Rocket
serde = { version = "1.0", features = ["derive"] }   # Add serde for JSON serialization
serde_json = "1.0"                                  # Add serde_json for handling JSON
sysinfo = "0.32.0"                                  # Ensure sysinfo is installed
